# libqwad

./: CHANGELOG.md  CMakeLists.txt  CmakeSettings.json  LICENSE  README.md
.github/workflows/: cmake-release.yaml
include/qwad/: palette.h  wad.h
src/: CMakeLists.txt  palette.cpp  texture.cpp  wad.cpp  wrapper.cpp
